--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -3,17 +3,20 @@
 #Texts for manifest.json
 
 #XTIT: Application name
-appTitle=My Team
+appTitle=Employee Movement
 
 #YDES: Application description
 employeeStatusChange=Employee Mutation
-employeeApproval=Employee Approval
+appApproval=Employee Approval
 #YDES: Application description
-appDescription=Manage my team
+appDescription=Employee Movement
+history=History
 #XTIT: Main view title
-title=My Team
+title=Employee Movement
 
 #XTIT: 
 showFrom=Show From
 
 orgChart=Org Chart
+
+orgChartTitle=Org Chart
