update orgchart, mutation, approval, history function

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -3,20 +3,122 @@
 #Texts for manifest.json
 
 #XTIT: Application name
-appTitle=Employee Movement
+appTitle=Employee Action
 
 #YDES: Application description
-employeeStatusChange=Employee Mutation
+employeeStatusChange=Employee Status Change
 appApproval=Employee Approval
 #YDES: Application description
-appDescription=Employee Movement
-history=History
+appDescription=Employee Action
+appMovement=MOVEMENT
+myrequest=My Request
 #XTIT: Main view title
 title=Employee Movement
+employeeActing=Employee Acting
+employeePromotion=Employee Promotion    
+employeeDemotion=Employee Demotion
+employeeAssignment=Employee Assignment
 
 #XTIT: 
 showFrom=Show From
-
-orgChart=Org Chart
-
+orgChart=Employee Organizational Chart
 orgChartTitle=Org Chart
+
+#overview
+year=Year:
+searchTitle=Employee Name/NIK:
+hideFilter=Hide Filter Bar
+filter=Filters
+go=Go
+
+# acting
+name=Nama
+entryDate=Tanggal Masuk
+ratingPA1=Rating PA 1
+ratingPA2=Rating PA 2
+ratingPA3=Rating PA 3
+marketingAvg=Pencapaian Marketing (Avg)
+sanctionType=Jenis Sanksi
+penaltyType=Jenis Pelanggaran
+actDate=Tanggal Berlaku
+actionType=Action Type
+reason=Reason for Action
+effectiveDate=Tanggal Efektif
+mutation=Mutasi
+positionId=Position
+positionText=Position Text
+employeeGroupId=Employee Group
+employeeGroupText=Employee Group Text
+employeeSubgroupId=Employee Subgroup
+employeeSubgroupText=Employee Subgroup Text
+perAreaId=Kantor (Personnel Area)
+perAreaText=Kantor (Personnel Area Text)
+perSubAreaId=Cabang (Personnel Subarea)
+perSubAreaText=Cabang (Personnel Subarea Text)
+status=Status
+contractType=Contract Type
+jobtitle=Jabatan
+homebase=Homebase
+level=Pangkat/Level
+unitOrgId=Unit Organisasi
+unitOrgText=Unit Organisasi Text
+divisionId=Divisi
+divisionText=Divisi Text
+directManager=Posisi Atasan Langsung
+positionMPP=MPP sesuai Posisi
+grade=Grade 
+existingEmployee=Jumlah Karyawan Existing sesuai Posisi
+positionVacant=Jumlah Vacant sesuai Posisi
+positionExisting=Karyawan Existing sesuai Posisi
+directStaff=Bawahan Langsung sesuai Posisi
+jobtitleStatus=Status Jabatan
+endDateJob=Tanggal Berakhir Status Jabatan
+salaryAdj=Penyesuaian Gaji
+salaryAdjValue=Usulan Gaji
+as=Sebagai
+employeeChange=Nama Karyawan yang diganti
+basicCon=Dasar Pertimbangan
+warningEvaluation=Harap Lampirkan hasil Evaluasi di bagian Upload Dokumen
+warningPKWT=Harap Lampirkan PKWT terakhir (jika perpanjang kontrak) di bagian Upload Dokummen
+assessment=Assessment (Diisi team Talent dan Management)
+assessmentResult=Hasil Assessment
+overQualified=Melebihi kualifikasi
+qualified=Memenuhi kualifikasi
+almostQualified=Hampir memenuhi kualifikasi
+notQualified=Belum memenuhi kualifikasi
+warningAssessment=Harap Lampirkan hasil Assessment di bagian Upload Dokumen
+biChecking=BI Checking (Diisi Compensation dan Benefit)
+biResult=Hasil BI Checking
+biNotes=Catatan BI Checking
+warningBiChecking=Harap Lampirkan hasil BI Checking di bagian Upload Dokumen
+disposisi=Disposisi (Diisi Data Management)
+rekomendasiHCM=Rekomendasi HCM
+downloadDis=Download file template Disposisi (excel)
+disResult=Hasil Disposisi
+dispoNote=Catatan Hasil Disposisi
+warningDisposisi=Harap Lampirkan hasil Disposisi di bagian Upload Dokumen
+upDoc=Upload Dokumen
+docType=Jenis Dokumen
+pic=PIC
+desc=Keterangan
+upload=Upload
+
+#history
+employee=Employee
+employeePhoto=Employee Photo
+actionReason=Action Type & Reason for Action
+dateAction=Date Action
+dateReq=Date Request
+personResponsible=Person Responsible
+msgFillRequired=Please fill in all required fields.
+
+#IMG
+filenotsupport=The file type *.({0}) is not supported. Choose one of the following types:({1})
+sizelimit=File size limit exceeded
+attFileSizeLimitMsg=Maximum upload file size: 10 MB
+filemulimg=Multiple Image to Upload
+
+batchcr=BatchCreate
+batchcratt=BatchCreateAttachment
+lbltime1=Batch Create completed in {0} seconds
+urlpath=/sap/opu/odata/sap/ZHR_MOVEMENT_MAN_SRV/FileAttachmentViewSet(Reqid=guid%27{0}%27,Seqnr=%27{1}%27)/$value?sap-client={2}
