--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -31,6 +31,38 @@ hideFilter=Hide Filter Bar
 filter=Filters
 go=Go
 
+#employee detail
+group=Employee Group
+subgroup=Employee Subgroup
+divisi=Group/Divisi
+ou=Unit Organisasi
+position=Posisi
+perarea=Personnel Area
+persubarea=Personnel Subarea
+hiringdate=Hiring Date
+name=Nama
+pendterakhir=Pendidikan Terakhir
+jenispekerjaan=Jenis Pekerjaan
+revise=Revisi
+
+#movement
+careerband=Beda Career Band/Tidak
+
+#statuschange
+TipeKontrak=Tipe Kontrak Saat ini
+kontrakchange=Perubahan Tipe Kontrak
+hasilperform=Hasil Performance (dari form Evaluasi)
+totalnilai=Total Nilai (dari form Evaluasi)
+kategorieval=Kategori Evaluasi
+homebaseasal=Homebase Asal
+homebasetujuan=Homebase Tujuan
+datedesc=khusus Contract extend diisi sesuai periode kontrak
+validateDate=Tanggal Valid Kontrak
+
+# assignment
+pertimbanganHCM=Pertimbangan HCM
+
+
 # acting
 name=Nama
 entryDate=Tanggal Masuk
@@ -39,6 +71,7 @@ ratingPA2=Rating PA 2
 ratingPA3=Rating PA 3
 marketingAvg=Pencapaian Marketing (Avg)
 sanctionType=Jenis Sanksi
+sanctionProgress=Sanksi Berjalan
 penaltyType=Jenis Pelanggaran
 actDate=Tanggal Berlaku
 actionType=Action Type
@@ -56,6 +89,8 @@ perAreaText=Kantor (Personnel Area Text)
 perSubAreaId=Cabang (Personnel Subarea)
 perSubAreaText=Cabang (Personnel Subarea Text)
 status=Status
+tanggalStatusJabatan=Tanggal Status Jabatan
+mutasiberkala=Mutasi Berkala
 contractType=Contract Type
 jobtitle=Jabatan
 homebase=Homebase
@@ -90,7 +125,7 @@ warningAssessment=Harap Lampirkan hasil Assessment di bagian Upload Dokumen
 biChecking=BI Checking (Diisi Compensation dan Benefit)
 biResult=Hasil BI Checking
 biNotes=Catatan BI Checking
-warningBiChecking=Harap Lampirkan hasil BI Checking di bagian Upload Dokumen
+warningBiChecking=Harap lampirkan dokumen BI Checking di bagian Upload Dokumen
 disposisi=Disposisi (Diisi Data Management)
 rekomendasiHCM=Rekomendasi HCM
 downloadDis=Download file template Disposisi (excel)
@@ -101,6 +136,9 @@ upDoc=Upload Dokumen
 docType=Jenis Dokumen
 pic=PIC
 desc=Keterangan
+careerBand=Career Band
+careerLevel= Career Level
+tanggalBerakhirStatus=Tanggal Berakhir Status Jabatan
 upload=Upload
 
 #history
@@ -110,7 +148,7 @@ actionReason=Action Type & Reason for Action
 dateAction=Date Action
 dateReq=Date Request
 personResponsible=Person Responsible
-msgFillRequired=Please fill in all required fields.
+msgFillRequired=Mohon lengkapi data yang wajib diisi
 
 #IMG
 filenotsupport=The file type *.({0}) is not supported. Choose one of the following types:({1})
@@ -121,4 +159,5 @@ filemulimg=Multiple Image to Upload
 batchcr=BatchCreate
 batchcratt=BatchCreateAttachment
 lbltime1=Batch Create completed in {0} seconds
-urlpath=/sap/opu/odata/sap/ZHR_MOVEMENT_MAN_SRV/FileAttachmentViewSet(Reqid=guid%27{0}%27,Seqnr=%27{1}%27)/$value?sap-client={2}
+urlpath=/sap/opu/odata/sap/{2}/FileAttachmentViewSet(Reqid=guid%27{0}%27,Seqnr=%27{1}%27)/$value?sap-client={3}
+# urlpath=/sap/opu/odata/sap/ZHR_MOVEMENT_MAN_SRV/FileAttachmentViewSet(Reqid=guid%27{0}%27,Seqnr=%27{1}%27)/$value?sap-client={2}
