update action acting

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -110,6 +110,8 @@ jobtitleStatus=Status Jabatan
 endDateJob=Tanggal Berakhir Status Jabatan
 salaryAdj=Penyesuaian Gaji
 salaryAdjValue=Usulan Gaji
+tunjanganPLT=Tunjangan PLT
+nomTunjanganPLT=Nominal Tunjangan PLT
 as=Sebagai
 employeeChange=Nama Karyawan yang diganti
 basicCon=Dasar Pertimbangan
